[project]
name = "opoint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "Karl Erik Hofseth", email = "karl.e.hofseth@infomedia.dk" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
]

[project.scripts]
opoint-safefeed-client = "opoint_safefeed_client:main"

[project.optional-dependencies]
requests = [
    "requests>=2.32.3",
]
aio = [
    "aiohttp[speedups]>=3.11.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opoint"]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.1",
    "types-requests>=2.32.0.20241016",
]

[tool.mypy]
strict = true
